fix: remove align-content property because it was causing the top to be cut off when the content was larger than its container

--- a/src/styles/bio.css
+++ b/src/styles/bio.css
@@ -31,16 +31,14 @@
 
 @media screen and (min-width: 800px) {
     .about {
-        align-content: center;
-        padding: 2rem;
-        margin: 2rem 0;
-        flex: 1;
         grid-template-columns: 300px 1fr;
+        padding: 70px;
+        max-width: 1100px;
+        margin: 0 auto;
     }
 
     .about--image-wrapper {
         border: none;
-
         padding: 0;
     }
 
